@@ -1,7 +1,7 @@
-Fix for next release:
+Fix for next release highlight:
 
-  highlight other windows
-  why lose state during page down?
+  other windows why
+  lose state during page down?
   perl highlighter
   more syntax files
 
@@ -11,7 +11,6 @@ Fix for next release:
  Update man page.
 
  Save all modified files
- Save all modified
 
  Reload modified files (or current window)
 
@@ -23,15 +22,6 @@ Compiling
    ^C during build.
 
  Query save loop? for kill-emacs and compile
-
- Emacs reload from file function? ^X ^V 
- (it just works out if ^X ^V kills all instances of the buffer)
- (doesn't have to be exact: make ^K E (which ^X ^V uses) able to
- reload file.
-
- nextword,nextword,prevword sequence 
- doesn't work for marking next successive word at ends of lines
- (swap word is broken)
 
   don't use -notite by default.
 
@@ -133,6 +123,7 @@ Jmacs/Jstar/Jpico:
 
  ESC args should work differently in emacs
 
+ many negative args do not work properly
 
  exiting options and i-search with ESC is not pretty
  (it isn't in emacs either)
