@@ -44,6 +44,8 @@ int udropon PARAMS((BW *bw));
 int uselect PARAMS((BW *bw));
 int upsh PARAMS((BW *bw));
 int upop PARAMS((BW *bw));
+int ulower PARAMS((BW *bw));
+int uupper PARAMS((BW *bw));
 extern int nstack;
 
 #endif
