@@ -23,6 +23,7 @@ JOE 3.1
   completion in text windows.
 - Warn if file changed on save.
 - Added Ctrl-space block selection method
+- ^K E asks if you want to load original version of the file
 
 JOE 3.0 (23 APR 2004)
 - UTF-8
