@@ -1,5 +1,12 @@
 Tue May 11 2004  Joe Allen <jhallen@world.std.com>
 
+	Added "upper" and "lower" functions (no longer
+	depend on "tr" command).
+
+	Fix jmacs transpose word command.
+
+Tue May 11 2004  Joe Allen <jhallen@world.std.com>
+
 	Fix marking mode so only window with cursor is
 	effected.
 
